# KISStalon

./: .gitignore  README.md  config.example.toml  pyproject.toml
kiss_talon/: cli.py
kisstalon/: cli.py  notify.py  runner.py  scheduler.py  talon.py
skill/: kisstalon.md
